# binance-api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
binance_api/: __init__.py  category.py  models.py  types.py
binance_api/api/: __init__.py  abc.py  base.py
binance_api/api/api/: __init__.py
binance_api/api/dapi/: __init__.py
binance_api/api/fapi/: __init__.py
binance_api/api/fapi/fapi/: __init__.py
binance_api/api/fapi/fapi/v1/: __init__.py  models.py  types.py
binance_api/api/fapi/fapi/v1/position_side/: __init__.py
binance_api/api/fapi/fapi/v1/ticker/: __init__.py  models.py
binance_api/api/fapi/futures/: __init__.py
binance_api/api/fapi/futures/data/: __init__.py  models.py  types.py
binance_api/api/sapi/: __init__.py
binance_api/api/vapi/: __init__.py
binance_api/api/wapi/: __init__.py
binance_api/exception/: __init__.py  api_error.py  code_exception.py
binance_api/exception/code_factory/: __init__.py  abc.py  base.py
binance_api/http/: __init__.py  types.py
binance_api/http/client/: __init__.py  abc.py  aiohttp.py
