[tool.poetry]
name = "binance-api"
version = "0.1.0"
description = "Binance API wrapper"
authors = ["Van Burgerberg <van-burgerberg@yandex.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vanburgerberg/binance-api"
repository = "https://github.com/vanburgerberg/binance-api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vanburgerberg/binance-api/issues"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
ujson = "^4.0.2"
aiohttp = "^3.7.4"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
mypy = "^0.812"
isort = "^5.7.0"
black = "^20.8b1"
pre-commit = "^2.11.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
exclude = '''
(
    \.git
  | venv
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
